# team-automation-big-views

./: .gitignore  main.py  pyproject.toml  ruff.toml
big_views/: __init__.py  logger.py  manager.py  types.py
big_views/__pyinstaller/: __init__.py  hook-big_views.py  hook-botflow.py
big_views/exceptions/: pipeline_expected_error.py
big_views/helpers/: asset_helpers.py  load_font_helpers.py  style_helpers.py
big_views/screens/: initial_screen.py  loading_screen.py
big_views/styles/: app.qss  file_widget.qss  form_widget.qss  initial_screen.qss  loading_screen.qss  text_widget.qss
big_views/widgets/: file_step_widget.py  form_step_widget.py  text_step_widget.py
big_views/workers/: async_loop_thread_worker.py  pipeline_worker.py
