[project]
name = "team-automation-big-views"
version = "1.0.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6==6.9.1",
]

[project.optional-dependencies]
dev = ["ruff==0.6"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["big_views*"]

[tool.setuptools.package-data]
big_views = ["**/*"]
